--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,12 @@
 /bootstrap/compiled.php
+/vendor
+*vendor*
+composer.phar
+composer.lock
 .env.*.php
 .env.php
 .env
+.DS_Store
+Thumbs.db
+
+tests/_output/*
